log
Thu 25 Apr 2024 01:25:13 AM UTC: 
 tests:  0|6
total_score: 0/70
dc32217
Thu 25 Apr 2024 02:01:34 AM UTC: 
 hashmap.c | 12 +++++++++---
 1 file changed, 9 insertions(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
927ee8c
Thu 25 Apr 2024 02:13:00 AM UTC: 
 hashmap.c | 16 ++++++++++++++--
 1 file changed, 14 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:55:3: error: expected expression before ‘}’ token
   55 |   }
      |   ^
hashmap.c:54:10: error: unused variable ‘newPos’ [-Werror=unused-variable]
   54 |     long newPos =
      |          ^~~~~~
test.c:453:5: error: ‘main’ is normally a non-static function [-Werror=main]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:511:1: error: expected declaration or statement at end of input
  511 | }
      | ^
At top level:
test.c:453:5: error: ‘main’ defined but not used [-Werror=unused-function]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:217:5: error: ‘insert_test5’ defined but not used [-Werror=unused-function]
  217 | int insert_test5(){ //factor de carga>0.7, se llama a función enlarge
      |     ^~~~~~~~~~~~
test.c:131:6: error: ‘compare_test’ defined but not used [-Werror=unused-function]
  131 | void compare_test(){
      |      ^~~~~~~~~~~~
test.c:125:6: error: ‘hash_test3’ defined but not used [-Werror=unused-function]
  125 | void hash_test3(){ //no random
      |      ^~~~~~~~~~
test.c:111:6: error: ‘hash_test2’ defined but not used [-Werror=unused-function]
  111 | void hash_test2(){ // colisiones
      |      ^~~~~~~~~~
test.c:100:6: error: ‘hash_test1’ defined but not used [-Werror=unused-function]
  100 | void hash_test1(){ // posición válida
      |      ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
dd71c66
Thu 25 Apr 2024 02:33:05 AM UTC: 
 hashmap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
b409544
Thu 25 Apr 2024 02:34:17 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
cd6c990
Thu 25 Apr 2024 02:44:36 AM UTC: 
 hashmap.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  0|0
1a52b9b
Thu 25 Apr 2024 02:47:06 AM UTC: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
9c4e5a2
Thu 25 Apr 2024 02:48:19 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
c58c5e0
Thu 25 Apr 2024 02:49:22 AM UTC: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|0
a95a49a
Thu 25 Apr 2024 02:52:06 AM UTC: 
 hashmap.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  2|5
total_score: 20/70
ddabed6
Thu 25 Apr 2024 02:55:19 AM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 30/70
bcc7ee2
Thu 25 Apr 2024 03:02:59 AM UTC: 
 hashmap.c | 22 +++++++++++++++++++---
 1 file changed, 19 insertions(+), 3 deletions(-)
 tests:  6|4
total_score: 30/70
a2a3a6d
Thu 25 Apr 2024 03:03:53 AM UTC: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  8|3
total_score: 40/70
216d11c
Thu 25 Apr 2024 03:08:47 AM UTC: 
 hashmap.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘eraseMap’:
hashmap.c:102:17: error: array subscript is not an integer
  102 |     map->buckets[par->key] = NULL;
      |                 ^
Compilation failed
551a619
Thu 25 Apr 2024 03:09:15 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
bab66e9
Thu 25 Apr 2024 03:09:28 AM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  11|2
total_score: 50/70
9c119ff
Thu 25 Apr 2024 03:14:57 AM UTC: 
 hashmap.c | 12 ++++++++++--
 1 file changed, 10 insertions(+), 2 deletions(-)
 tests:  13|2
total_score: 50/70
c7776dc
Thu 25 Apr 2024 03:17:26 AM UTC: 
 hashmap.c | 12 ++++++++++--
 1 file changed, 10 insertions(+), 2 deletions(-)
 tests:  13|2
total_score: 50/70
799f9d5
Thu 25 Apr 2024 03:18:42 AM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  13|2
total_score: 50/70
55adef7
Thu 25 Apr 2024 03:19:42 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  16|1
total_score: 60/70
0db25b3
